// 资产经营管理系统 — dbdocs.io 源文件
// 与 docs/database/数据库设计.md 同步维护

Project ams {
  database_type: 'PostgreSQL'
  Note: 'Asset Management System — 主业务库'
}

Table company {
  id bigserial [pk, increment]
  parent_id bigint [ref: > company.id]
  name varchar(200) [not null]
  company_type varchar(50)
  status smallint [default: 1]
  created_at timestamptz [not null]

  indexes {
    parent_id [name: 'idx_company_parent']
  }
}

Table department {
  id bigserial [pk, increment]
  company_id bigint [not null, ref: > company.id]
  name varchar(100) [not null]
  created_at timestamptz [not null]
}

Table user {
  id bigserial [pk, increment]
  username varchar(64) [unique, not null]
  password_hash varchar(255) [not null]
  name varchar(100)
  phone varchar(20)
  department_id bigint [ref: > department.id]
  status smallint [default: 1]
}

Table project {
  id bigserial [pk, increment]
  company_id bigint [not null, ref: > company.id]
  name varchar(200) [not null]
  address varchar(500)
  longitude numeric(10,7)
  latitude numeric(10,7)
  status smallint [default: 1]

  indexes {
    company_id [name: 'idx_project_company']
  }
}

Table asset {
  id bigserial [pk, increment]
  project_id bigint [not null, ref: > project.id]
  asset_no varchar(64) [unique, not null]
  name varchar(200) [not null]
  asset_type varchar(20) [not null, note: 'property | land']
  area numeric(18,2)
  source_type varchar(50)
  ownership_type varchar(50)
  property_company_id bigint [ref: > company.id]
  operating_company_id bigint [ref: > company.id]
  lease_control_status varchar(30) [not null]
  base_rent_assessed numeric(18,2)
  base_rent_floor numeric(18,2)
  qr_code_url varchar(500)
  parent_asset_id bigint [ref: > asset.id]
  deleted_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    project_id [name: 'idx_asset_project']
    operating_company_id [name: 'idx_asset_company']
    lease_control_status [name: 'idx_asset_status']
  }
}

Table tenant {
  id bigserial [pk, increment]
  name varchar(200) [not null]
  phone varchar(20)
  id_no varchar(50)
  tenant_type varchar(20)
  blacklist boolean [default: false]
  credit_score integer [default: 100]
  wechat_openid varchar(64)

  indexes {
    id_no [name: 'idx_tenant_id_no']
    phone [name: 'idx_tenant_phone']
  }
}

Table lease_listing {
  id bigserial [pk, increment]
  asset_id bigint [not null, ref: > asset.id]
  asset_unit_id bigint
  annual_rent numeric(18,2)
  rent_amount numeric(18,2)
  rent_negotiable boolean [not null, default: false]
  rent_type varchar(30)
  cover_image_file_id bigint
  cover_image_url varchar(500)
  detail_images text
  recommended boolean [not null, default: false]
  sort_no integer [not null, default: 0]
  intro text
  reject_reason varchar(500)
  status varchar(20) [not null, note: 'pending 待审批 / active 招租中 / rejected 已驳回 / closed 已关闭']
  published_at timestamptz
  closed_at timestamptz
  remark varchar(500)

  Note: '招租发布（V59）：发布 = 提交审批；只有 status=active 会被租控派生为 leasing，端上可见。必须挂 asset_unit_id（租控视图按它判定）'

  indexes {
    (status, recommended, sort_no, id) [name: 'idx_lease_listing_pub_sort']
    (asset_id, status) [name: 'idx_lease_listing_asset_status']
  }
}

Table asset_operator {
  id bigserial [pk, increment]
  user_id bigint [not null]
  status smallint [not null, default: 1]
  remark varchar(500)
  deleted_at timestamptz

  Note: '资产运营人员档案（V60）：一人一份有效档案（部分唯一索引 uk_asset_operator_user WHERE deleted_at IS NULL）'

  indexes {
    user_id [unique, name: 'uk_asset_operator_user']
  }
}

Table asset_operator_role {
  id bigserial [pk, increment]
  operator_id bigint [not null, ref: > asset_operator.id]
  role_id bigint [not null]

  Note: '运营人员 × 角色（V60）：只登记不授权 —— 不写 user_role，不产生实际权限'

  indexes {
    (operator_id, role_id) [unique, name: 'uk_asset_operator_role']
  }
}

Table asset_operator_scope {
  id bigserial [pk, increment]
  operator_id bigint [not null, ref: > asset_operator.id]
  scope_type varchar(20) [not null, note: 'project / zone / asset']
  scope_id bigint [not null]

  Note: '运营人员 × 资产运营范围（V60）：用类型 + id 两列而非三个可空列 —— 后者会让去重因 NULL 语义静默失效'

  indexes {
    (operator_id, scope_type, scope_id) [unique, name: 'uk_asset_operator_scope']
    (scope_type, scope_id) [name: 'idx_asset_operator_scope_target']
  }
}

Table contract {
  id bigserial [pk, increment]
  contract_no varchar(64) [unique, not null]
  asset_id bigint [not null, ref: > asset.id]
  tenant_id bigint [not null, ref: > tenant.id]
  version integer [default: 1]
  parent_contract_id bigint [ref: > contract.id]
  start_date date [not null]
  end_date date [not null]
  lease_area numeric(18,2)
  rent_type varchar(30)
  rent_amount numeric(18,2) [not null]
  deposit_amount numeric(18,2)
  payment_cycle varchar(20)
  free_rent_days integer [default: 0]
  status varchar(30) [not null]
  esign_status varchar(20)
  created_at timestamptz [not null]

  indexes {
    asset_id [name: 'idx_contract_asset']
    tenant_id [name: 'idx_contract_tenant']
    status [name: 'idx_contract_status']
    end_date [name: 'idx_contract_end_date']
  }
}

Table payment_plan {
  id bigserial [pk, increment]
  contract_id bigint [not null, ref: > contract.id]
  period_start date [not null]
  period_end date [not null]
  planned_amount numeric(18,2) [not null]
  status varchar(20) [not null]
}

Table bill {
  id bigserial [pk, increment]
  contract_id bigint [not null, ref: > contract.id]
  payment_plan_id bigint [ref: > payment_plan.id]
  bill_no varchar(64) [unique, not null]
  amount numeric(18,2) [not null]
  due_date date [not null]
  status varchar(20) [not null]
}

Table payment {
  id bigserial [pk, increment]
  bill_id bigint [not null, ref: > bill.id]
  amount numeric(18,2) [not null]
  paid_at timestamptz [not null]
  channel varchar(30)
  idempotency_key varchar(64) [unique]
}

Table vacate_order {
  id bigserial [pk, increment]
  contract_id bigint [not null, ref: > contract.id]
  status varchar(30) [not null]
  settlement_amount numeric(18,2)
  deposit_refund numeric(18,2)
}

Table repair_order {
  id bigserial [pk, increment]
  asset_id bigint [not null, ref: > asset.id]
  status varchar(30) [not null]
  description text
  created_at timestamptz [not null]
}

Table alert_rule {
  id bigserial [pk, increment]
  company_id bigint [not null, ref: > company.id]
  rule_type varchar(50) [not null]
  config jsonb
  enabled boolean [default: true]
}

Table tenant_credit {
  id bigserial [pk, increment]
  tenant_id bigint [not null, ref: > tenant.id]
  score_delta integer [not null]
  reason varchar(200)
  created_at timestamptz [not null]
}

Table agent_session {
  id bigserial [pk, increment]
  user_id bigint [not null, ref: > user.id]
  company_id bigint [ref: > company.id]
  title varchar(200)
  status varchar(20)
  created_at timestamptz [not null]
}

Table agent_run {
  id bigserial [pk, increment]
  session_id bigint [ref: > agent_session.id]
  user_id bigint [ref: > user.id]
  intent varchar(50)
  template_id varchar(64)
  status varchar(20)
  trace_id varchar(64)
  started_at timestamptz
  finished_at timestamptz
}

Table agent_tool_call {
  id bigserial [pk, increment]
  run_id bigint [not null, ref: > agent_run.id]
  tool_name varchar(100)
  request_json jsonb
  response_hash varchar(64)
  response_summary jsonb
  duration_ms integer
  created_at timestamptz [not null]
}

Table agent_report {
  id bigserial [pk, increment]
  run_id bigint [not null, ref: > agent_run.id]
  title varchar(200)
  format varchar(20)
  status varchar(20)
  preview_path varchar(500)
  file_path varchar(500)
  verified boolean
  approved_by bigint [ref: > user.id]
  created_at timestamptz [not null]
}

Table agent_report_citation {
  id bigserial [pk, increment]
  report_id bigint [not null, ref: > agent_report.id]
  claim_key varchar(100)
  claim_value text
  tool_call_id bigint [ref: > agent_tool_call.id]
  api_path varchar(200)
  verified boolean
}

Table agent_prompt_template {
  id bigserial [pk, increment]
  template_code varchar(64) [unique, not null]
  name varchar(200)
  definition jsonb
  version integer
  enabled boolean
}

Table agent_model_audit {
  id bigserial [pk, increment]
  run_id bigint [not null, ref: > agent_run.id]
  model_id varchar(100)
  prompt_tokens integer
  completion_tokens integer
  sensitivity varchar(20)
  created_at timestamptz [not null]
}

Table approval_flow_def {
  id bigserial [pk, increment]
  biz_type varchar(50) [not null]
  name varchar(100)
  definition jsonb
  version integer
  enabled boolean
}

Table approval_instance {
  id bigserial [pk, increment]
  flow_def_id bigint [ref: > approval_flow_def.id]
  biz_type varchar(50)
  biz_id bigint
  status varchar(20)
  submitted_by bigint [ref: > user.id]
  submitted_at timestamptz
}

Table approval_task {
  id bigserial [pk, increment]
  instance_id bigint [not null, ref: > approval_instance.id]
  node_id varchar(50)
  assignee_id bigint [ref: > user.id]
  status varchar(20)
  acted_at timestamptz
}

Table notification {
  id bigserial [pk, increment]
  user_id bigint [not null, ref: > user.id]
  title varchar(200)
  content text
  biz_type varchar(50)
  biz_id bigint
  channel varchar(20)
  read_at timestamptz
  created_at timestamptz [not null]
}

Table disposal_order {
  id bigserial [pk, increment]
  asset_id bigint [not null, ref: > asset.id]
  disposal_type varchar(30)
  status varchar(20)
  reason varchar(500)
  assessed_value numeric(18,2)
  book_value numeric(18,2)
  actual_amount numeric(18,2)
  counterparty varchar(200)
  pnl_amount numeric(18,2)
  payment_id bigint [ref: > payment.id]
  disposal_user_id bigint
  disposal_user_name varchar(100)
  disposal_date date
  remark varchar(500)
  created_at timestamptz [not null]

  Note: '资产的处置单（带状态机与退出租控语义）。V46 新增 disposal_user_id / disposal_user_name / disposal_date / remark 四个表单展示字段；本表无 deleted_at，不参与后续记录的全量 diff 软删。'
}

// ============================================================================
// 资产 / 项目 / 分区「后续记录」（V46）
//   设计见 docs/superpowers/specs/2026-09-12-record-forms-design.md
//   四张记录表用 owner_type + owner_id 多态定位宿主（无外键，故 DBML 无法表达 ref）：
//     owner_type ∈ asset | project | zone
// ============================================================================

Table biz_attachment {
  id bigserial [pk, increment]
  owner_type varchar(30) [not null]
  owner_id bigint [not null]
  biz_type varchar(40) [not null]
  file_id bigint [not null]
  sort integer [not null, default: 0]
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by bigint
  updated_by bigint
  deleted_at timestamptz

  Note: '通用附件关联（多态）。biz_type: receive_doc/issue_scene/source_attach/disposal_attach；file_id 指向 file_metadata.id。新增引用时校验文件归属，防跨账号关联。'

  indexes {
    (owner_type, owner_id, sort) [name: 'idx_biz_attachment_owner']
    file_id [name: 'idx_biz_attachment_file']
  }
}

Table biz_receive_record {
  id bigserial [pk, increment]
  owner_type varchar(20) [not null]
  owner_id bigint [not null]
  handover_type varchar(50)
  doc_name varchar(200)
  handover_user_id bigint
  handover_user_name varchar(100)
  handover_date date
  remark varchar(500)
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by bigint
  updated_by bigint
  deleted_at timestamptz

  indexes {
    (owner_type, owner_id, id) [name: 'idx_biz_receive_record_owner']
  }
}

Table biz_receive_issue {
  id bigserial [pk, increment]
  receive_id bigint [not null, ref: > biz_receive_record.id]
  issue_type varchar(50)
  description varchar(1000)
  discoverer_id bigint
  discoverer_name varchar(100)
  sort integer [not null, default: 0]
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by bigint
  updated_by bigint
  deleted_at timestamptz

  indexes {
    (receive_id, sort) [name: 'idx_biz_receive_issue_receive']
  }
}

Table biz_source_info {
  id bigserial [pk, increment]
  owner_type varchar(20) [not null]
  owner_id bigint [not null]
  source_person_id bigint
  source_person_name varchar(100)
  source_unit varchar(200)
  source_date date
  source_desc varchar(1000)
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by bigint
  updated_by bigint
  deleted_at timestamptz

  Note: '1:1 由部分唯一索引 uk_biz_source_info_owner (owner_type, owner_id) WHERE deleted_at IS NULL 保证；软删后允许重新录入。'

  indexes {
    (owner_type, owner_id) [name: 'uk_biz_source_info_owner', unique]
  }
}

Table biz_disposal_record {
  id bigserial [pk, increment]
  owner_type varchar(20) [not null]
  owner_id bigint [not null]
  disposal_type varchar(50)
  disposal_user_id bigint
  disposal_user_name varchar(100)
  amount_wan numeric(18,2)
  disposal_date date
  remark varchar(500)
  created_at timestamptz [not null]
  updated_at timestamptz
  created_by bigint
  updated_by bigint
  deleted_at timestamptz

  Note: '项目 / 分区处置台账（owner_type 本期仅 project|zone），无审批流程；资产处置仍走 disposal_order。amount_wan 单位万元。'

  indexes {
    (owner_type, owner_id, id) [name: 'idx_biz_disposal_record_owner']
  }
}

Table occupation_order {
  id bigserial [pk, increment]
  asset_id bigint [not null, ref: > asset.id]
  status varchar(20)
  start_date date
  end_date date
}

Table refund_order {
  id bigserial [pk, increment]
  payment_id bigint [ref: > payment.id]
  amount numeric(18,2)
  status varchar(20)
}

Table asset_certificate {
  id bigserial [pk, increment]
  asset_id bigint [not null, ref: > asset.id]
  cert_type varchar(50)
  cert_no varchar(100)
  mortgage_status varchar(20)
  file_id bigint
}
